--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "storybook": "start-storybook -p 9001"
   },
   "dependencies": {
+    "@storybook/addon-actions": "^5.1.1",
     "@storybook/vue": "^5.0.11",
     "babel-preset-vue": "^2.0.2",
     "cross-env": "^5.2.0",
