--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-vue": "^2.0.2",
     "cross-env": "^5.2.0",
     "lodash": "^4.17.11",
+    "npm-check-updates": "^3.1.10",
     "nuxt": "^2.4.0"
   },
   "devDependencies": {
