--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@storybook/addon-actions": "^5.1.3",
     "@storybook/vue": "^5.1.3",
+    "axios": "^0.19.0",
     "babel-preset-vue": "^2.0.2",
     "cross-env": "^5.2.0",
     "lodash": "^4.17.11",
